--- a/slps.css
+++ b/slps.css
@@ -1,24 +1,23 @@
 body {color:#033}
 h1, h2, div.c {text-align:center}
 h2 a, div.c em {font-size:small}
+a:hover {text-decoration:underline}
+a:link, a:visited {color:#039}
+a:link.red, a:visited.red {color:#933}
+ul li {list-style:disc}
 dt {font-weight:bold}
 dl {margin-left:3em}
+br {clear:both}
+pre {border:1px solid black; border-spacing:2px; border-collapse:collapse; background-color:#ECECEC}
 img {border:0}
 .last {width:100%; text-align:right; font-style:italic}
 .last img {border:0; width:88px; height:31px}
-br {clear:both}
 .links {text-align:center; font-family:monospace; font-weight:bold}
 .links a {text-decoration:none}
-a:hover {text-decoration:underline}
-a:link {color:#039}
-a:visited {color:#006}
-ul li {list-style:disc}
-a:link.red, a:visited.red {color:#933}
 .label, .sel {color:green}
 .marked {background-color:#FFE5B4}
 .nt {color:blue; font-weight:bold}
 .t {color:red; font-style:italic}
-.meta .cmd {color:green; font-style:italic; font-family:serif}
+.meta, .cmd {color:green; font-style:italic; font-family:serif}
 .b {text-align:right; font-style:italic}
 .date {font-size:small}
-pre {border:1px solid black; border-spacing:2px; border-collapse:collapse; background-color:#ECECEC}
