Forgot the logo

--- a/slps.css
+++ b/slps.css
@@ -22,3 +22,5 @@ img {border:0}
 .t {color:red; font-style:italic}
 .meta, .cmd {color:green; font-style:italic; font-family:serif}
 .b {text-align:right; font-style:italic}
+.box {width:200px; height:200px}
+.box img {width:200px}
